# granite-playground-agents

./: .dockerignore  .env.beeai  .env.example  .env.local  .env.rits  .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  pyproject.toml  pyrightconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pre-commit.yml  pytest.yml
a2a/: .env.template  Dockerfile  Dockerfile_agent  Dockerfile_agent_chat  Dockerfile_agent_research  Dockerfile_agent_search  pyproject.toml
a2a/Dockerfiles/agent/: Dockerfile
a2a/Dockerfiles/agent_chat/: Dockerfile
a2a/Dockerfiles/agent_research/: Dockerfile
a2a/Dockerfiles/agent_search/: Dockerfile
a2a/a2a_agents/: agent.py  agent_chat.py  agent_research.py  agent_search.py  config.py  trajectory.py  utils.py
a2a/a2a_agents/agents/: agent.py
a2a/a2a_agents/agents/chat/: agent_chat.py
a2a/a2a_agents/agents/deep/: README.md  agent.py  factory.py  middleware.py  model_factory.py  prompts.py  util.py
a2a/a2a_agents/agents/deep_agent/: agent.py  prompts.py  tools.py
a2a/a2a_agents/agents/research/: agent_research.py
a2a/a2a_agents/agents/search/: agent_search.py
acp/: Dockerfile  pyproject.toml
acp/acp_agent/: agent.py  cache.py  config.py  heartbeat.py  resources.py  store.py  utils.py
c9/d09518eeb7/: metadata.json
c9/d09518eeb7/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
granite_chat/: __init__.py  agent.py  chat.py  chat_model.py  client.py  config.py  emitter.py  events.py  heartbeat.py  logger.py  markdown.py  memory.py  model.py  phases.py  status.py  usage.py  utils.py  work.py  workers.py
granite_chat/acp/: resources.py  store.py
granite_chat/chat/: prompts.py
granite_chat/citations/: citations.py  events.py  prompts.py  regenerator.py  types.py
granite_chat/research/: prompts.py  researcher.py  types.py
granite_chat/search/: agent.py  citations.py  compressor.py  embeddings.py  filter.py  mixins.py  prompts.py  tool.py  types.py  vector_store.py
granite_chat/search/embeddings/: __init__.py  embeddings.py  factory.py  model.py  tokenizer.py  watsonx.py
granite_chat/search/engines/: __init__.py  engine.py  factory.py  google.py  tavily.py
granite_chat/search/scraping/: __init__.py  arxiv.py  beautiful_soup.py  extract.py  extractor.py  pymupdf.py  scraper.py  utils.py  web_scraping.py
granite_chat/search/vector_store/: __init__.py  factory.py  vector_store.py
granite_chat/thinking/: prompts.py  response_parser.py  tool.py
granite_core/: pyproject.toml
granite_core/granite_core/: __init__.py  chat_model.py  config.py  emitter.py  events.py  logging.py  markdown.py  memory.py  phases.py  usage.py  utils.py  work.py
granite_core/granite_core/chat/: __init__.py  handler.py  prompts.py
granite_core/granite_core/citations/: citations.py  events.py  prompts.py  types.py
granite_core/granite_core/gurardrails/: base.py  copyright.py  web_access.py
granite_core/granite_core/research/: prompts.py  researcher.py  types.py
granite_core/granite_core/search/: filter.py  mixins.py  prompts.py  robots.py  tool.py  types.py  user_agent.py
granite_core/granite_core/search/embeddings/: factory.py  model.py  tokenizer.py  types.py  utils.py  watsonx.py
granite_core/granite_core/search/engines/: duckduckgo.py  engine.py  factory.py  google.py  tavily.py
granite_core/granite_core/search/scraping/: __init__.py  arxiv.py  base.py  beautiful_soup.py  docling.py  extract.py  pymupdf.py  runner.py  scraper.py  scraping.py  types.py  utils.py  web_scraping.py  wikipedia.py
granite_core/granite_core/search/vector_store/: __init__.py  factory.py  vector_store.py
granite_core/granite_core/thinking/: prompts.py  response_parser.py  stream_handler.py  tool.py
granite_core/tests/: test_arxiv_scraper.py  test_cache.py  test_chat.py  test_chat_handler.py  test_chat_model.py  test_config.py  test_docling_scraper.py  test_embeddings.py  test_emitter.py  test_guardrails.py  test_markdown.py  test_memory.py  test_prompts.py  test_research.py  test_robots.py  test_scraper.py  test_search.py  test_thinking.py  test_usage.py  test_utils.py  test_vector_store.py  test_wikipedia_scraper.py
granite_core_mcp/: README.md  pyproject.toml
granite_core_mcp/granite_core_mcp/: __init__.py  base.py  internet_search.py
granite_core_mcp/tests/: test_internet_search_mcp.py
http/: pyproject.toml
http/http_agents/: __init__.py  config.py  main.py
http/http_agents/models/: requests.py  responses.py
http/http_agents/routers/: __init__.py  chat.py  health.py  research.py  search.py  sessions.py
http/http_agents/services/: session_manager.py
http/http_agents/utils/: __init__.py  converters.py  event_queue.py  streaming.py
mcp/: inspect.sh  pyproject.toml
mcp/mcp_servers/: internet_search.py  web.py
scripts/: check_header.py
tests/: test_stub.py
