[project]
name = "granite-chat"
version = "0.1.0"
description = "ACP Granite Chat"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "acp-sdk>=0.8.4",
    "beeai-framework@git+https://github.com/i-am-bee/beeai-framework.git#subdirectory=python",
    "gpt-researcher>=0.13.3",
    "langchain-ollama>=0.3.3",
    "python-dotenv>=1.1.0",
    "granite-io@git+https://github.com/ibm-granite/granite-io/",
    "transformers>=4.52.4",
]

[tool.ruff]
lint.select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "UP",    # pyupgrade
    "I",     # isort
    "B",     # bugbear
    "ANN",   # annotations
    "N",     # pep8-naming
    "C4",    # Comprehensions
    "DTZ",   # DatetimeZ
    "Q",     # Quotes
    "SIM",   # Simplify
    "RUF",   # Ruff
    "TID",   # tidy-imports
    "ASYNC", # async
]
lint.ignore = ["ANN401"]
lint.fixable = ["ALL"]
lint.unfixable = []
force-exclude = true
line-length = 120
extend-exclude = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports, "parents" | "all"
ban-relative-imports = "all"

[tool.uv.sources]
detect-secrets = { git = "https://github.com/ibm/detect-secrets.git", rev = "master" }

[dependency-groups]
dev = ["detect-secrets", "pre-commit>=4.2.0", "ruff>=0.11.10"]
