[project]
name = "granite-core-mcp"
version = "0.1.0"
description = "Granite core MCP services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.25.0",
    "granite-core",
]

[tool.uv.sources]
granite-core = { path = "../granite_core", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov-report term"